<resources>
    <string name="app_name">Amarecor</string>
    <string name="title_activity_main2_activityrep">Main2Activityrep</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="add_report">Add Report</string>
    <string name="doctor_details">Doctor Details</string>
    <string name="report_details">Report Details</string>
    <string name="Employees">Employees</string>
    <string name="Reports">Reports</string>
    <string name="Expense">Expense</string>
    <string name="Settings">Settings</string>
    <string name="Logout">Logout</string>
    <string name="medical_representative">Medical Representative</string>
    <string name="admin">Admin</string>
    <string name="Manager">Manager</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
