<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item

            android:title="@string/Employees"
            android:id="@+id/employees_id"
            android:icon="@drawable/employee_icon">

        </item>

        <item

            android:title="@string/Reports"
            android:id="@+id/reports_id"
            android:icon="@drawable/report_icon">

        </item>

        <item

            android:title="@string/Expense"
            android:id="@+id/expense_id"
            android:icon="@drawable/expense_icon">

        </item>

    </group>

    <item android:title="Advance">
        <menu>
            <item

                android:id="@+id/settings_id"
                android:icon="@drawable/setting_icon"
                android:title="@string/Settings">

            </item>
            <item

                android:id="@+id/logout_id"
                android:icon="@drawable/logout_icon"
                android:title="@string/Logout">

            </item>
        </menu>


    </item>


</menu>